--- a/src/components/PercentView.module.css
+++ b/src/components/PercentView.module.css
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 1em;
-    border: 1px solid #772b2b;
+    padding: 2em;
+    border: 1px solid #c5fc00;
     font-size: 1.5em;
 
 }
